# orbit

./: .env  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  tailwind.config.js
app/: database.py
app/config/: database.py  setting.py  settings.py
app/dependencies/: auth.py
app/models/: image.py  user.py
app/routers/: auth.py  image_router.py
app/schemas/: image_schema.py  user_schema.py
app/services/: image_service.py  user_service.py
app/utils/: jwt.py  limiter.py  pagination.py  security.py
docs/: DESIGN.md
static/css/: coffee.css  layout.css  nav.css  orbit.css  tailwind.css
static/js/: main.js  nav.js  orbit.js
templates/: base.html  index.html
