[project]
name = "orbit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.139.0",
    "pillow>=12.3.0",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.32",
    "slowapi>=0.1.10",
    "sqlmodel>=0.0.39",
]
